@@ -5,8 +5,7 @@ val appName    = conf.getString("app.name").toLowerCase().replaceAll("[_\\.\\W+]
 val appVersion = conf.getString("app.version")
 
 sbtPlugin    := true
-scalaVersion := "2.12.6"
-//giter8.ScaffoldPlugin.projectSettings
+scalaVersion := "2.13.0"
 
 // Custom Maven repository
 resolvers += "Sonatype OSS Releases" at "https://oss.sonatype.org/content/repositories/releases/"
@@ -15,22 +14,13 @@ lazy val root = (project in file(".")).enablePlugins(JavaAppPackaging, DockerPlu
     name         := appName,
     version      := appVersion,
     organization := "com.github.btnguyen2k",
-    //scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
     resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
 )
 
 /*----------------------------------------------------------------------*/
 // Convenient settings: mostly copied from src/g8/build.sbt
 /*----------------------------------------------------------------------*/
-
-// Eclipse configurations
-EclipseKeys.preTasks                 := Seq(compile in Compile)                     // Force compile project before running the eclipse command
-EclipseKeys.skipParents in ThisBuild := false
-EclipseKeys.projectFlavor            := EclipseProjectFlavor.Java                   // Java project. Don't expect Scala IDE
-EclipseKeys.executionEnvironment     := Some(EclipseExecutionEnvironment.JavaSE18)  // expect Java 1.8
-// Use .class files instead of generated .scala files for views and routes
-//EclipseKeys.createSrc                := EclipseCreateSrc.ValueSet(EclipseCreateSrc.ManagedClasses, EclipseCreateSrc.ManagedResources)
-
+maintainer := "btnguyen2k@gmail.com"
 
 /* Docker packaging options */
 // Manual docker build:
@@ -41,9 +31,10 @@ EclipseKeys.executionEnvironment     := Some(EclipseExecutionEnvironment.JavaSE1
 dockerCommands := Seq()
 import com.typesafe.sbt.packager.docker._
 dockerCommands := Seq(
-  Cmd("FROM"          , "openjdk:8-jre-alpine"),
+  Cmd("FROM"          , "openjdk:11-jre-slim"),
+  Cmd("LABEL"         , "maintainer=\"Thanh Nguyen\""),
   Cmd("ADD"           , "opt /opt"),
-  Cmd("RUN"           , "apk add --no-cache -U tzdata bash && ln -s /opt/docker /opt/" + appName + " && chown -R daemon:daemon /opt && chmod 755 /opt/docker/conf/*.sh && chmod 755 /opt/docker/bin/*"),
+  Cmd("RUN"           , "apk add --no-cache -U bash ca-certificates tzdata && ln -s /opt/docker /opt/" + appName + " && chown -R daemon:daemon /opt && chmod 755 /opt/docker/conf/*.sh && chmod 755 /opt/docker/bin/*"),
   Cmd("RUN"           , "cp /usr/share/zoneinfo/Asia/Ho_Chi_Minh /etc/localtime"),
   Cmd("WORKDIR"       , "/opt/" + appName),
   Cmd("USER"          , "daemon"),
@@ -52,13 +43,10 @@ dockerCommands := Seq(
 packageName in Docker := appName
 version in Docker     := appVersion
 
-
 sources in (Compile, doc) := Seq.empty
 publishArtifact in (Compile, packageDoc) := false
-javacOptions    ++= Seq("-source", "1.8", "-target", "1.8")
 fork := false
 val _mainClass = "com.github.btnguyen2k.mus.Bootstrap"
-
 
 /* Packaging options */
 mainClass in (Compile, packageBin)       := Some(_mainClass)
@@ -71,36 +59,36 @@ autoScalaLibrary                         := false
 import NativePackagerHelper._
 mappings in Universal ++= directory(baseDirectory.value / "conf")
 
-
 /* Compiling options */
-javacOptions ++= Seq("-source", "1.8", "-target", "1.8", "-encoding", "UTF-8")
-
+javacOptions ++= Seq("-source", "11", "-target", "11", "-encoding", "UTF-8")
 
 /* Run options */
 javaOptions  ++= collection.JavaConverters.propertiesAsScalaMap(System.getProperties)
   .map{ case (key,value) => "-D" + key + "=" +value }.toSeq
 mainClass in (Compile, run) := Some(_mainClass)
 
-
 /* Eclipse settings */
-EclipseKeys.projectFlavor                := EclipseProjectFlavor.Java                   // Java project. Don't expect Scala IDE
-EclipseKeys.executionEnvironment         := Some(EclipseExecutionEnvironment.JavaSE18)  // expect Java 1.8
-
+EclipseKeys.preTasks                 := Seq(compile in Compile)                     // Force compile project before running the eclipse command
+EclipseKeys.skipParents in ThisBuild := false
+EclipseKeys.projectFlavor            := EclipseProjectFlavor.Java                   // Java project. Don't expect Scala IDE
+//EclipseKeys.executionEnvironment     := Some(EclipseExecutionEnvironment.JavaSE18)  // No Java11 yet, manually switch to JDK11 in Eclipse!
+// Use .class files instead of generated .scala files for views and routes
+//EclipseKeys.createSrc                := EclipseCreateSrc.ValueSet(EclipseCreateSrc.ManagedClasses, EclipseCreateSrc.ManagedResources)
 
 /* Dependencies */
-val _slf4jVersion       = "1.7.26"
-val _undertowVersion    = "2.0.19.Final"
-val _jacksonVersion     = "2.9.8"
-val _ddthCommonsVersion = "0.9.2"
-val _ddthRecipesVersion = "0.2.0.1"
+val _slf4jVersion       = "1.7.28"
+val _undertowVersion    = "2.0.25.Final"
+val _jacksonVersion     = "2.9.9"
+val _ddthCommonsVersion = "1.1.0"
+val _ddthRecipesVersion = "1.0.0"
 
 libraryDependencies ++= Seq(
     "org.slf4j"                     % "slf4j-api"                     % _slf4jVersion
    ,"org.slf4j"                     % "log4j-over-slf4j"              % _slf4jVersion
    ,"ch.qos.logback"                % "logback-classic"               % "1.2.3"
 
-//   ,"org.apache.commons"            % "commons-lang3"                 % "3.8.1"
-//   ,"com.typesafe"                  % "config"                        % "1.3.3"
+   ,"org.apache.commons"            % "commons-lang3"                 % "3.9"
+   ,"com.typesafe"                  % "config"                        % "1.3.4"
 
    ,"io.undertow"                   % "undertow-core"                 % _undertowVersion
    ,"io.undertow"                   % "undertow-websockets-jsr"       % _undertowVersion
